[package]
name = "stm32wl55-demo"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.3"
defmt = "0.3.8"
defmt-rtt = "0.4.1"
nucleo-wl55jc-bsp = "0.6.1"
panic-halt = "0.2.0"
panic-probe = { version="0.3.2", features=["print-defmt"]}
stm32wlxx-hal = { version = "0.6.1", features = ["stm32wle5"] }

[profile.release]
debug=2

[[bin]]
name = "baremetal_blinky"
test = false
bench = false

[[bin]]
name = "defmt_demo"
test = false
bench = false

[[bin]]
name = "hal_demo"
test = false
bench = false

[[bin]]
name = "bsp_demo"
test = false
bench = false
