[package]
name = "stm32wl55-demo"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m = { version = "0.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7"
defmt = "0.3"
defmt-rtt = "0.4"
nucleo-wl55jc-bsp = "0.6"
panic-halt = "0.2"
panic-probe = { version="0.3", features=["print-defmt"]}
stm32wlxx-hal = { version = "0.6", features = ["stm32wle5", "rt"] }

[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = true
lto = false
opt-level = 3
overflow-checks = true

[profile.test]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = true
lto = false
opt-level = 3
overflow-checks = true

[profile.bench]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = false
opt-level = 3
overflow-checks = false

[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = false
opt-level = 3 
overflow-checks = false

[[bin]]
name = "baremetal_blinky"
test = false
bench = false

[[bin]]
name = "defmt_demo"
test = false
bench = false

[[bin]]
name = "hal_demo"
test = false
bench = false

[[bin]]
name = "bsp_demo"
test = false
bench = false

[[bin]]
name = "interrupt_demo"
test = false
bench = false
